network_policies/networkpolicy_deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: namespace-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
