network_policies/networkpolicy_namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workshop-network-policy
  namespace: namespace-b
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: namespace-a
    ports:
    - protocol: TCP
      port: 80
